fix jumps, improve button layout

--- a/style.css
+++ b/style.css
@@ -234,6 +234,7 @@ a:hover
 grid-area: tab; 
 	height:100%;
   overflow: auto;
+  margin:0;
 
   background-color: #f1f1f1;
   
@@ -246,16 +247,23 @@ grid-area: tab;
 		"tab3";
 }
 
+
+
+ 
+
+
+
 /* Style the buttons that are used to open the tab content */
 .tab button {
 	width:25%;
-	font-size: 0.6vw;
+	height:100%;
+	font-size: .8vw;
   background-color: inherit;
   float: left;
   border: none;
   outline: none;
   cursor: pointer;
-  padding: .8em 1em;
+  padding: .6em .8em;
   transition: 0.3s;
 }
 
